# opengl-starter

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: main.hpp
src/: main.cpp
